--- a/page10.html
+++ b/page10.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="mbr-section content5 cid-re8IqVaaWT" id="content5-1y">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-re8IqVaaWT" id="content5-1y">
 
     
 
