--- a/page2.html
+++ b/page2.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-rebpiRM3Yc" id="content5-2u">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rebpiRM3Yc" id="content5-2u">
 
     
 
