--- a/page1.html
+++ b/page1.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-re7izkjIGS" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-re7izkjIGS" id="content5-1h">
 
     
 
